styled navbar and fixed z-index for modals

--- a/react-app/src/components/NavBar/NavBar.css
+++ b/react-app/src/components/NavBar/NavBar.css
@@ -20,14 +20,6 @@
     align-items: center;
 }
 
-.navbar-search {
-    width: 40%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 4px;
-}
-
 .navbar-title-and-feed {
     width: auto;
     display: flex;
@@ -147,10 +139,6 @@
 
 /* responsive queries*/
 @media only screen and (max-width: 1000px) {
-    .navbar-container
-    {
-        height: 6.5vh;
-    }
 
     .navbar-search{
         display: none;
@@ -205,7 +193,6 @@
     }
 
     .navbar-title-and-feed img {
-        height: 150px;
         margin: 27px 0 0 -25px;
     }
 
